# easycoref

./: .gitignore  Compiling annotated data - V1.ipynb  Coref.py  LICENSE  MANIFEST.in  README.md  class.ipynb  ct.sh  df_tutorial.csv  install_coref.sh  metascript.sh  setup.cfg  setup.py  tutorial.ipynb
.ipynb_checkpoints/: tutorial-checkpoint.ipynb
annotated/: annotated_examples.json
annotated_calibrationTask/: calibration.json  main-andrei.json  main-charles.json  main-florian.json  main-jp.json  main-thierry.json
old/: class.ipynb  neural_coref_clean.ipynb
old/.ipynb_checkpoints/: class-checkpoint.ipynb
src/e2ecoref/: experiments.conf  install.sh  predict.py  util.py
src/easycoref/: __init__.py  __main__.py  coref.py  download.py
