[metadata]
name = easycoref
version = 0.1
description = A practical wrapper for neuralcoref and e2ecoref

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:




install_requires =
    pandas ==1.3.4
    numpy ==1.21.2
    spacy >=2.1.0,<3.0.0
    neuralcoref ==4.0
    tensorflow-gpu==1.15
    tensorflow-hub>=0.4.0
    h5py
    nltk
    pyhocon
    scipy
    scikit-learn==0.21.0
    colorama



[options.packages.find]
where=src



[options.entry_points]
console_scripts =
    download = src.easycoref:download_all
